Add cheching rights