@@ -14,6 +14,19 @@
         <byte-buddy.version>1.14.18</byte-buddy.version>
         <h2.version>2.2.224</h2.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <artifactId>Server</artifactId>
     <name>Server</name>
